--- a/src/app/components/dialogs/question-dialog/question-dialog.component.html
+++ b/src/app/components/dialogs/question-dialog/question-dialog.component.html
@@ -1,11 +1,11 @@
-<h1 md-dialog-title *ngIf="!customText">Are you sure you want to do this?</h1>
-<h1 md-dialog-title *ngIf="customText">{{customText}}</h1>
-<button md-button md-tooltip="Cancel" [mdTooltipShowDelay]="500" color="primary" (click)="cancel()"
+<h1 mat-dialog-title *ngIf="!customText">Are you sure you want to do this?</h1>
+<h1 mat-dialog-title *ngIf="customText">{{customText}}</h1>
+<button mat-button matTooltip="Cancel" [matTooltipShowDelay]="500" color="primary" (click)="cancel()"
         class="cancel">
-  <md-icon>close</md-icon>
+  <mat-icon>close</mat-icon>
   <span *ngIf="showButtonText">Cancel</span>
 </button>
-<button md-button md-tooltip="Confirm" [mdTooltipShowDelay]="500" (click)="confirm()" class="confirm">
-  <md-icon>check</md-icon>
+<button mat-button matTooltip="Confirm" [matTooltipShowDelay]="500" (click)="confirm()" class="confirm">
+  <mat-icon>check</mat-icon>
   <span *ngIf="showButtonText">Confirm</span>
 </button>
