--- a/src/app/components/editable/profile-image/profile-image.component.html
+++ b/src/app/components/editable/profile-image/profile-image.component.html
@@ -1,5 +1,5 @@
-<img md-card-avatar class="profile_image" src="{{src}}" *ngIf="editMode !== true">
+<img mat-card-avatar class="profile_image" src="{{src}}" *ngIf="editMode !== true">
 
 <div *ngIf="editMode === true">
-  <img md-card-avatar class="profile_image" src="{{src}}">
+  <img mat-card-avatar class="profile_image" src="{{src}}">
 </div>
