--- a/src/app/pages/about/about.page.component.html
+++ b/src/app/pages/about/about.page.component.html
@@ -1,11 +1,11 @@
 <div fxFlex fxLayout="column" fxLayoutGap="100px" fxLayoutAlign="center center">
   <app-about *ngIf="aboutUser && waiting === false && failed === false" [aboutUser]="aboutUser"></app-about>
-  <md-card *ngIf="waiting === true || failed === true" fxLayoutAlign="center center">
-    <md-spinner *ngIf="waiting === true && failed === false"></md-spinner>
-    <md-card-content *ngIf="waiting === false && failed === true">
+  <mat-card *ngIf="waiting === true || failed === true" fxLayoutAlign="center center">
+    <mat-spinner *ngIf="waiting === true && failed === false"></mat-spinner>
+    <mat-card-content *ngIf="waiting === false && failed === true">
       User was not found.
       <br>
-      <button md-button routerLink="/home" color="primary">Home</button>
-    </md-card-content>
-  </md-card>
+      <button mat-button routerLink="/home" color="primary">Home</button>
+    </mat-card-content>
+  </mat-card>
 </div>
