--- a/src/app/pages/splash/splash.page.component.html
+++ b/src/app/pages/splash/splash.page.component.html
@@ -11,9 +11,9 @@
     class="d d-3"><img src="../../../assets/images/doge.gif"></span>
   </div>
   <br>
-  <md-card>
+  <mat-card>
     SPLASH SPLASH
-  </md-card>
+  </mat-card>
   <br>
   <div>
     <span class="d d-3"><img src="../../../assets/images/doge.gif"></span><span class="d d-2"><img src="../../../assets/images/doge.gif"></span><span class="d"><img src="../../../assets/images/doge.gif"></span><span class="d d-2">.</span><span
