--- a/src/app/components/editable/social-link/social-link.component.html
+++ b/src/app/components/editable/social-link/social-link.component.html
@@ -1,20 +1,20 @@
-<a [href]='"https://" + href' *ngIf="editMode !== true && link"><button md-icon-button><i class="mdi mdi-24px {{styleClass}} icon"></i></button></a>
+<a [href]='"https://" + href' *ngIf="editMode !== true && link"><button mat-icon-button><i class="mdi mdi-24px {{styleClass}} icon"></i></button></a>
 
 <div *ngIf="editMode === true">
 
 
 
-  <button md-icon-button [mdMenuTriggerFor]="edit" (click)="toggleEditPanel()"><i class="mdi mdi-24px {{styleClass}} icon" [ngClass]="{'nolink': link === ''}"></i></button>
+  <button mat-icon-button [matMenuTriggerFor]="edit" (click)="toggleEditPanel()"><i class="mdi mdi-24px {{styleClass}} icon" [ngClass]="{'nolink': link === ''}"></i></button>
 
-  <md-menu #edit="mdMenu">
+  <mat-menu #edit="matMenu">
     <div (click)="$event.stopPropagation()" fxLayout="row" class="inputMenuItem">
-      <md-input-container [ngClass]="{'smallInput': mediaAlias === 'xs' || mediaAlias === 'sm'}">
-        <input #input mdInput placeholder="{{href.substring(0, href.lastIndexOf('/') + 1)}}" (click)="$event.stopPropagation()" [ngModel]="link" (ngModelChange)="onInput($event)" (keyup.enter)="onEnter()"  [attr.maxlength]="48" type="text">
-        <md-hint align="end">{{input.value.length}} / {{input.maxLength}}</md-hint>
-      </md-input-container>
-      <button md-button md-tooltip="Confirm" [ngClass]="{'smallButton': mediaAlias === 'xs' || mediaAlias === 'sm'}" [mdTooltipShowDelay]="500" (click)="onEnter()" class="check">
-        <md-icon>check</md-icon>
+      <mat-input-container [ngClass]="{'smallInput': mediaAlias === 'xs' || mediaAlias === 'sm'}">
+        <input #input matInput placeholder="{{href.substring(0, href.lastIndexOf('/') + 1)}}" (click)="$event.stopPropagation()" [ngModel]="link" (ngModelChange)="onInput($event)" (keyup.enter)="onEnter()"  [attr.maxlength]="48" type="text">
+        <mat-hint align="end">{{input.value.length}} / {{input.maxLength}}</mat-hint>
+      </mat-input-container>
+      <button mat-button matTooltip="Confirm" [ngClass]="{'smallButton': mediaAlias === 'xs' || mediaAlias === 'sm'}" [matTooltipShowDelay]="500" (click)="onEnter()" class="check">
+        <mat-icon>check</mat-icon>
       </button>
     </div>
-  </md-menu>
+  </mat-menu>
 </div>
