--- a/src/app/components/editable/text-input/text-input.component.html
+++ b/src/app/components/editable/text-input/text-input.component.html
@@ -2,14 +2,14 @@
   {{text}}
 </span>
 
-<md-input-container *ngIf="editMode === true && type === 'textarea'">
+<mat-input-container *ngIf="editMode === true && type === 'textarea'">
 
-  <textarea #input mdInput mdTextareaAutosize [mdAutosizeMaxRows]="15" placeholder="{{placeholder}}" (keyup.enter)="onEnter()" [ngModel]="text" (ngModelChange)="onInput($event)" [attr.maxlength]="maxlength"></textarea>
-  <md-hint align="end">{{input.value.length}} / {{maxlength}}</md-hint>
-</md-input-container>
+  <textarea #input matInput matTextareaAutosize [matAutosizeMaxRows]="15" placeholder="{{placeholder}}" (keyup.enter)="onEnter()" [ngModel]="text" (ngModelChange)="onInput($event)" [attr.maxlength]="maxlength"></textarea>
+  <mat-hint align="end">{{input.value.length}} / {{maxlength}}</mat-hint>
+</mat-input-container>
 
-<md-input-container *ngIf="editMode === true && type !== 'textarea'" class="smallInput">
+<mat-input-container *ngIf="editMode === true && type !== 'textarea'" class="smallInput">
 
-  <input #input mdInput placeholder="{{placeholder}}" [ngModel]="text" (ngModelChange)="onInput($event)" (keyup.enter)="onEnter()"  [attr.maxlength]="maxlength" type="text">
-  <md-hint align="end">{{input.value.length}} / {{maxlength}}</md-hint>
-</md-input-container>
+  <input #input matInput placeholder="{{placeholder}}" [ngModel]="text" (ngModelChange)="onInput($event)" (keyup.enter)="onEnter()"  [attr.maxlength]="maxlength" type="text">
+  <mat-hint align="end">{{input.value.length}} / {{maxlength}}</mat-hint>
+</mat-input-container>
