--- a/src/app/pages/four04/four04.component.html
+++ b/src/app/pages/four04/four04.component.html
@@ -1,10 +1,10 @@
 <div fxFlexFill fxLayoutAlign="center center" fxLayout="column">
-  <md-card>
-    <md-card-content fxLayout="column" fxLayoutAlign="center center" >
+  <mat-card>
+    <mat-card-content fxLayout="column" fxLayoutAlign="center center" >
       This page was not found :(
 
-      <button md-button routerLink="/home" color="primary">Home</button>
-    </md-card-content>
+      <a mat-button routerLink="/home" color="primary">Home</a>
+    </mat-card-content>
 
-  </md-card>
+  </mat-card>
 </div>
