--- a/src/app/pages/account/account.page.component.html
+++ b/src/app/pages/account/account.page.component.html
@@ -1,7 +1,7 @@
 <div fxFlexFill fxLayout="column" fxLayoutAlign="center center">
   <mat-card>
     <mat-card-header>
-      Account Settings
+      <mat-card-title>Account Settings</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form fxLayout="column" fxLayoutGap="10px" [formGroup]="settingsForm" novalidate (submit)="saveUserInfo()" *ngIf="lgUser && user">
