added global style for .mat header text

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,8 @@ html, body {
 a {
   text-decoration: none;
 }
+
+/* not the best solution but only way to have it work :( */
+.mat-card-header-text {
+  width: 100%;
+}
