--- a/src/app/components/dialogs/newuser-dialog/newuser-dialog.component.html
+++ b/src/app/components/dialogs/newuser-dialog/newuser-dialog.component.html
@@ -3,7 +3,7 @@
 
   <mat-step [stepControl]="occupationForm">
     <form [formGroup]="occupationForm">
-      <ng-template matStepLabel>Your Cccupation</ng-template>
+      <ng-template matStepLabel>Your Occupation</ng-template>
       <mat-form-field>
         <input matInput placeholder="Occupation" formControlName="occupation">
       </mat-form-field>
@@ -17,8 +17,10 @@
         <input matInput placeholder="Company" formControlName="company">
       </mat-form-field>
     </form>
-    <button mat-button matStepperPrevious>Back</button>
-    <button mat-button matStepperNext>Next</button>
+    <div fxLayout="row">
+      <button mat-button matStepperPrevious>Back</button>
+      <button mat-button matStepperNext>Next</button>
+    </div>
   </mat-step>
   <mat-step [stepControl]="bioForm">
     <form [formGroup]="bioForm">
@@ -27,8 +29,10 @@
         <textarea matInput matTextareaAutosize formControlName="bio" [matAutosizeMaxRows]="15" placeholder="Write a little about yourself" [attr.maxlength]="280"></textarea>
       </mat-form-field>
     </form>
-    <button mat-button matStepperPrevious>Back</button>
-    <button mat-button matStepperNext>Next</button>
+    <div fxLayout="row">
+      <button mat-button matStepperPrevious>Back</button>
+      <button mat-button matStepperNext>Next</button>
+    </div>
   </mat-step>
   <mat-step>
     <ng-template matStepLabel>Get Verified</ng-template>
@@ -44,8 +48,10 @@
   </mat-step>
   <mat-step>
     <ng-template matStepLabel>Save your info</ng-template>
-    <button mat-button matStepperPrevious>Back</button>
-    <button mat-button (click)="saveInfo()">Save</button>
+    <div fxLayout="row">
+      <button mat-button matStepperPrevious>Back</button>
+      <button mat-button (click)="saveInfo()">Save</button>
+    </div>
   </mat-step>
 
 </mat-vertical-stepper>
