--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -8,7 +8,7 @@
       <mat-card-subtitle>
         {{blog.subtitle}}
       </mat-card-subtitle>
-      <div fxLayout="row" fxLayoutAlign="centet center">
+      <div fxLayout="row" fxLayoutAlign="center center">
         <div fxFlex></div>
         <div class="videoContainer" *ngIf="blog.hasVideo">
           <video poster="{{blog.image}}" preload="auto" muted loop autoplay class="blogVideo">
@@ -34,7 +34,7 @@
     <mat-card-content *ngIf="waiting === false && failed === true">
       User was not found.
       <br>
-      <button md-button routerLink="/home" color="primary">Home</button>
+      <button mat-button routerLink="/home" color="primary">Home</button>
     </mat-card-content>
 
   </mat-card>
