update to angular5, material4,

--- a/src/app/pages/about/about.page.component.css
+++ b/src/app/pages/about/about.page.component.css
@@ -6,11 +6,11 @@ a {
   color: black;
 }
 
-md-card-actions {
+mat-card-actions {
   margin-bottom: -16px;
 }
 
-md-card {
+mat-card {
   max-width: 650px;
   min-width: 300px;
 }
