update links add github

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -15,18 +15,19 @@
     <mat-icon>extension</mat-icon>
     <span>Projects</span>
   </button>
-  <button mat-menu-item [matMenuTriggerFor]="mediaMenu">
+  <!--<button mat-menu-item [matMenuTriggerFor]="mediaMenu">
     <mat-icon>video_library</mat-icon>
     <span>Media</span>
-  </button>
+  </button>-->
 
 </mat-menu>
 
 <mat-menu #projectMenu="matMenu">
-  <a href="http://www.chiefsretro.com" target="_blank" mat-menu-item>Chiefsretro.com</a>
+  <a href="http://www.chiefsretro.com" mat-menu-item>Chiefsretro.com</a>
+  <a href="https://github.com/seriouslag" mat-menu-item>My Github</a>
 </mat-menu>
 
-<mat-menu #mediaMenu="matMenu">
+<!--<mat-menu #mediaMenu="matMenu">
   <a href="http://www.seriouslag.com:32400/" target="_blank" rel="nofollow noreferrer noopener" mat-menu-item>Plex</a>
   <a href="http://www.seriouslag.com:9001/" target="_blank" rel="nofollow noreferrer noopener" mat-menu-item>QBT</a>
-</mat-menu>
+</mat-menu>-->
